@@ -1,7 +1,9 @@
+Made the "Energy Chunks" checkbox larger on the first tab.
+Changed the background color for the control panels on the first tab.
 Adjusted energy chunks mapping algorithms and some of the model object parameters such that all objects will receive an energy chunk after a small amount of heating.
 Fixed an issue where energy chunks could, in some cases, appear to get stuck on the outside of a container.
 Removed code that was previously used to make energy chunks fade in and out, since it is no longer used.
-Removed a number of images that are no longer used.  This should reduce startup time.
+Removed a number of images that are no longer used.  This should reduce file size.
 Fixed a problem where all tool tips associated with the time control panel were popping up in the wrong places.  Did this by disabling tool tips.
 Added a feature where thermometers are automatically moved if the user drops a block behind them while they are sensing the beaker temperature.
 Made the burner that heats the tea pot not snap to zero when released.
